--- a/package/stremio/package.yml
+++ b/package/stremio/package.yml
@@ -1,8 +1,8 @@
 name        : stremio
-version     : 4.4.107
-release     : 4
+version     : 4.4.120
+release     : 5
 source      :
-  - git|https://github.com/Stremio/stremio-shell : 4.4.107
+  - git|https://github.com/Stremio/stremio-shell : v4.4.120
 homepage    : https://www.stremio.com
 license     : GPL-3.0-or-later
 component   : desktop.multimedia
